BABY: fixes overflow issue on m.commons webform

--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/baby/ds_campaign.css
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2012/baby/ds_campaign.css
@@ -264,9 +264,7 @@ h2.pane-title {
 .mcommons-webform {
   background-color: #f3f3f4 !important;
   color: black;
-  overflow: auto;
-  height: 275px;
-  width: 75%; }
+  height: 300px; }
   .mcommons-webform input.field {
     width: 100%;
     height: 22px;
